--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>openshift-doradus-scalable</groupId>
-	<artifactId>openshift-doradus-scalable</artifactId>
+	<groupId>scalabledoradus</groupId>
+	<artifactId>scalabledoradus</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
-	<name>openshift-doradus-scalable</name>
+	<name>scalabledoradus</name>
 	<repositories>
 		<repository>
 			<id>eap</id>
@@ -32,22 +32,16 @@
 	</pluginRepositories>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>com.dell.doradus</groupId>
-			<artifactId>doradus-server</artifactId>
-			<version>2.1.1</version>
-		</dependency>
+	<dependencies>   
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 	<profiles>
 		<profile>
@@ -60,7 +54,7 @@
 			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 			<id>openshift</id>
 			<build>
-				<finalName>openshift-doradus-scalable</finalName>
+				<finalName>scalabledoradus</finalName>
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
