build Doradus Servlet to work in Openshift

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,9 +14,9 @@
 
 log4j.rootLogger=DEBUG, console, file, memory
 
-log4j.logger.org.eclipse.jetty= DEBUG
-log4j.appender.console.Threshold= DEBUG
-log4j.appender.file.Threshold= DEBUG
+log4j.logger.org.eclipse.jetty=INFO
+log4j.appender.console.Threshold=INFO
+log4j.appender.file.Threshold=INFO
 log4j.appender.memory.Threshold=DEBUG
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -35,4 +35,3 @@ log4j.appender.memory.layout=org.apache.log4j.PatternLayout
 log4j.appender.memory.layout.ConversionPattern= %d{ABSOLUTE} %p %c: %m%n
 log4j.appender.memory.capacity=20000
 
-log4j.logger.CQLService=DEBUG
