--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.dell.doradus</groupId>
+			<artifactId>doradus-server</artifactId>
+			<version>2.1.1</version>
+			<optional>true</optional>
+		</dependency>			
 	</dependencies>
 	<profiles>
 		<profile>
@@ -83,6 +88,11 @@
 						<configuration>
 							<outputDirectory>webapps</outputDirectory>
 							<warName>ROOT</warName>
+							 <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+            </manifest>
+          </archive>
 						</configuration>
 					</plugin>
 				</plugins>
