--- a/pom.xml
+++ b/pom.xml
@@ -63,16 +63,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.dell.doradus</groupId>
-			<artifactId>doradus-server</artifactId>			
-			<version>2.1.1</version>
-<!-- 			 <exclusions> -->
-<!-- 				<exclusion> -->
-<!--           			<groupId>org.eclipse.jetty</groupId>  -->
-<!--           			<artifactId>apache-jsp</artifactId> -->
-<!--         		</exclusion> -->
-<!--       		</exclusions>  		 -->
-		</dependency>		
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+			<scope>test</scope>
+		</dependency>
 <dependency>
   <groupId>com.dell.doradus</groupId>
   <artifactId>doradus-server</artifactId>
