--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -26,7 +26,7 @@ log4j.appender.console.layout.ConversionPattern= %d{ABSOLUTE} %p %c: %m%n
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.maxBackupIndex=50
 log4j.appender.file.maxFileSize=20MB
-log4j.appender.file.File=./doradus.log
+log4j.appender.file.File=../app-root/logs/doradus.log
 #log4j.appender.file.File=/var/lib/openshift/54ebbcea2ad064d935000001/app-root/logs/doradus.log
 #log4j.appender.file.File=${OPENSHIFT_LOG_DIR}/doradus.log
 
