--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
 <dependency>
   <groupId>com.dell.doradus</groupId>
   <artifactId>doradus-server</artifactId>
