build Doradus Servlet to work in Openshift

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>testapp</groupId>
-	<artifactId>testapp</artifactId>
+	<groupId>com.dell.doradus</groupId>
+	<artifactId>openshift-doradus-scalable</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
-	<name>testapp</name>
+	<name>openshift-doradus-scalable</name>
 	<repositories>
 		<repository>
 			<id>eap</id>
@@ -61,7 +61,7 @@
 			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 			<id>openshift</id>
 			<build>
-				<finalName>testapp</finalName>
+				<finalName>openshift-doradus-scalable</finalName>
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
