--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,8 @@
 		</dependency>
 		<dependency>
 		  <groupId>com.dell.doradus</groupId>
-		  <artifactId>doradus-server</artifactId>
+		  <artifactId>doradus-rest</artifactId>
 		  <version>2.1.1</version>
-		  <scope>system</scope>
-		  <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/doradus-server-2.1.1.jar</systemPath>
 		</dependency>			
 	</dependencies>
 	<profiles>
