--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		</dependency>
 		<dependency>
 		  <groupId>com.dell.doradus</groupId>
-		  <artifactId>doradus-rest</artifactId>
+		  <artifactId>doradus-server</artifactId>
 		  <version>2.1.1</version>
 		</dependency>			
 	</dependencies>
